Reset line-height on lozenge labels to avoid circle sizing bleed

--- a/less/plugins/adapt-contrib-slider/slider.less
+++ b/less/plugins/adapt-contrib-slider/slider.less
@@ -43,6 +43,7 @@
         padding: 0 0.5rem;
         border-radius: @item-ui-border-radius;
         white-space: nowrap;
+        line-height: normal;
       }
     }
   }
